fix delete button alignment

--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -136,7 +136,7 @@ hr {
   .domain .form-section fieldset:first-child .delete-button-container {
     margin-top: 2.2rem;
     display: flex;
-    align-items: center;
+    align-items: baseline;
   }
 }
 
